--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "android": {
       "package": "com.jaum519.kti",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptative-icon.png",
         "backgroundColor": "#0F172A"
       }
     },
