--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/native-stack": "^7.3.0",
     "babel-preset-expo": "~54.0.10",
     "expo": "~54.0.0",
-    "expo-firebase-recaptcha": "^2.3.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^12.0.0",
     "react": "19.1.0",
@@ -25,7 +24,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-webview": "~13.15.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
